fix(select):fix text overflow and default height

--- a/src/select/select.css
+++ b/src/select/select.css
@@ -22,7 +22,8 @@ body > .uix-select.open {
 .uix-select {
   /* Helper class to show styles when focus */ }
   .uix-select .uix-select-allowclear {
-    margin-right: 10px; }
+    margin-right: 10px;
+    line-height: 1; }
   .uix-select .uix-select-highlight {
     font-weight: bold; }
   .uix-select .uix-select-focus {
@@ -35,7 +36,8 @@ body > .uix-select.open {
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6); }
   .uix-select .uix-select-toggle {
     position: relative;
-    outline: 0; }
+    outline: 0;
+    overflow-x: hidden; }
   .uix-select .uix-select-toggle > .caret {
     position: absolute;
     height: 10px;
@@ -50,9 +52,7 @@ body > .uix-select.open {
     top: 45%;
     right: 15px; }
   .uix-select .uix-select-choices {
-    width: 100%;
     height: auto;
-    max-height: 200px;
     overflow-x: hidden;
     margin-top: -1px; }
   .uix-select .uix-select-choices-row > a {
@@ -112,6 +112,7 @@ body > .uix-select.open {
     font-size: 1.6em;
     line-height: 0.75; }
   .uix-select-multiple .uix-select-match-item {
+    padding: 1px 10px;
     outline: 0;
     margin: 0 3px 3px 0;
     position: relative; }
